# segaret

./: .gitignore  Cargo.toml  README.md  pop_test_01
disassembler/: Cargo.toml
hardware/: Cargo.toml
hardware/src/: lib.rs
m68k_emu/: Cargo.toml
m68k_emu/src/: addressing_mode_set.rs  bus.rs  cpu.rs  cpu_internals.rs  extension_word.rs  header.rs  interrupt_line.rs  lib.rs  operand.rs  operation.rs  primitives.rs  register_set.rs  status_flag.rs  status_register.rs  vectors.rs
m68k_emu/src/instruction_set/: bit_manipulation.rs  data_movement.rs  integer_arithmetic.rs  logical_instructions.rs  mod.rs  multiprocessor_instructions.rs  program_control.rs  shift_and_rotate.rs  system_control.rs
m68k_emu/src/opcode_generators/: abcd_generator.rs  mod.rs  (+45 more)
m68k_emu/tests/: integration_test.rs
mc68k_emu/: Cargo.toml
mc68k_emu/src/: addressing_mode.rs  lib.rs  mc68k_emu.rs  vector_table.rs
sg_vdp_emu/: Cargo.toml
sg_vdp_emu/src/: lib.rs
src/: bus.rs  controller.rs  cpu_bus.rs  disassembler.rs  m68k_bus.rs  main.rs  memory_space.rs  signal_bus.rs  vdp_bus.rs  z80_bus.rs
src/cartridge/: cartridge.rs
src/hardware/: bus.rs  mod.rs  vdp.rs
src/vdp_emu/: bus.rs  dot.rs  mod.rs  registers.rs  sprite.rs  tile.rs  vdp_emu.rs  vdp_port.rs
src/ym2612/: channel.rs  mod.rs  ym2612.rs
vdp_emu/: Cargo.toml
vdp_emu/src/: lib.rs  vdp_emu.rs  vdp_port.rs
z80_emu/: Cargo.toml
z80_emu/src/: addressing_mode.rs  bus.rs  cpu.rs  instruction_set.rs  lib.rs  macros.rs  operation.rs  primitives.rs  register_set.rs  z80_emu.rs
z80_emu/tests/: integration_test.rs
(+91 files in other folders)
