[workspace]

members = ["m68k_emu"] #, "z80_emu"]

resolver = "2"

[package]
name = "segaret"
version = "0.0.2"
edition = "2021"

[profile.dev]
debug-assertions = false

[dependencies.m68k_emu]
path = "./m68k_emu"

[dependencies]
spriter = { git="https://github.com/zvoleg/spriter" }
log = "0.4.25"
env_logger = "0.11.6"
